@@ -8,15 +8,17 @@ import java.sql.Timestamp;
 import java.time.Duration;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
-
+import java.util.List;
 import java.util.UUID;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.data.domain.Page;
+
 
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
-
 
 
 import org.springframework.security.core.Authentication;
@@ -32,6 +34,7 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.ResponseBody;
 import org.springframework.web.multipart.MultipartFile;
 
+import com.g3.elis.config.FileStorageConfig;
 import com.g3.elis.dto.form.BlogPostDto;
 import com.g3.elis.model.BlogPost;
 import com.g3.elis.model.User;
@@ -44,13 +47,15 @@ import jakarta.validation.Valid;
 @RequestMapping("/admin")
 public class AdminCreateBlogController {
 
-	private final String HTML_FILE_PATH = "src/main/resources/static/private/blog/blog-files/";
-	private final String IMAGE_FILE_PATH = "src/main/resources/static/private/blog/blog-images/";
+	private final String imgUploadDir =  "/blog/blog-images/";
+	public final String htmlUploadDir = "/blog/blog-files/";
+
 
 	@Autowired
 	private BlogPostService blogPostService;
 
 	@GetMapping("/admin-view-blog")
+
 
 	public String adminViewBlog(@RequestParam(defaultValue = "0") int page, Model model) {
 		int pageSize = 8; // Set the page size to 8
@@ -64,8 +69,9 @@ public class AdminCreateBlogController {
         model.addAttribute("nextPage", nextPage);
         model.addAttribute("previousPage", previousPage);
         model.addAttribute("totalPages", blogPostsPage.getTotalPages());
-//		List<BlogPost> blogPosts = blogPostService.getAllBlogPosts();
-//		model.addAttribute("blogPosts", blogPosts);
+		List<BlogPost> blogPosts = blogPostService.getAllBlogPosts();
+		model.addAttribute("blogPosts", blogPosts);
+
 
 		model.addAttribute("content", "admin/admin-view-blog");
 		return "/admin/admin-layout";
@@ -87,9 +93,9 @@ public class AdminCreateBlogController {
 
 			model.addAttribute("timeAgo", timeAgo);
 			// Read HTML file content
-			Path htmlFilePath = Paths.get(HTML_FILE_PATH + blogPost.getHtmlFileName());
-			String htmlContent = Files.readString(htmlFilePath);
-			model.addAttribute("htmlContent", htmlContent);
+			Path htmlFilePath = Paths.get(htmlUploadDir + blogPost.getHtmlFileName());
+			//String content = Files.readString(htmlFilePath);
+		//	model.addAttribute("content", content);
 			model.addAttribute("blogPost", blogPost);
 			return "/authenticated-user/blog-detail";
 		}
@@ -100,7 +106,7 @@ public class AdminCreateBlogController {
 	@GetMapping("/blog-html/{fileName}")
 	@ResponseBody
 	public String getBlogHtml(@PathVariable String fileName) throws IOException {
-		Path htmlFilePath = Paths.get(HTML_FILE_PATH + fileName);
+		Path htmlFilePath = Paths.get(htmlUploadDir + fileName);
 		return Files.readString(htmlFilePath);
 	}
 
@@ -110,6 +116,7 @@ public class AdminCreateBlogController {
 //		return "/admin/admin-create-blog";
 //	}
 
+	/*
 	@PostMapping("/admin-save-blog")
 	public String adminCreateBlog(@Valid @ModelAttribute("blogPostDto") BlogPostDto blogPostDto,
 			@RequestParam String content, @RequestParam(name = "img-file", required = false) MultipartFile imgFile,
@@ -134,7 +141,7 @@ public class AdminCreateBlogController {
 
 			} catch (IOException e) {
 				e.printStackTrace();
-				return "redirect:/admin-create-blog";
+				return "redirect:/admin/admin-view-blog";
 			}
 		}
 
@@ -163,10 +170,12 @@ public class AdminCreateBlogController {
 			Files.write(Paths.get(filePath), content.getBytes());
 		}
 
-		blogPostService.saveBlogPost(blogPostDto);
+		blogPostService.saveBlogPost(blogPostDto, filePath, imgFile);
 
 		return "redirect:/admin/admin-view-blog";
 	}
+	
+	*/
 
 	@GetMapping("/admin-delete-blog/{id}")
 	public String adminDeleteBlog(@PathVariable int id) throws IOException {
@@ -178,7 +187,7 @@ public class AdminCreateBlogController {
 //    public String adminEditBlog(@PathVariable("id") int id, Model model) {
 //        BlogPost blogPost = blogPostService.findById(id);
 //        if (blogPost != null) {
-//            model.addAttribute("htmlContent", blogPostService.getBlogPostContent(blogPost));
+//            model.addAttribute("content", blogPostService.getBlogPostContent(blogPost));
 //            model.addAttribute("blogPost", blogPost);
 //            return "/authenticated-user/blog-detail";
 //        }
@@ -188,34 +197,39 @@ public class AdminCreateBlogController {
     @GetMapping("/admin-create-blog")
     public String adminCreateBlog(Model model) {
         model.addAttribute("blogPostDto", new BlogPostDto());
+        
         return "/admin/admin-create-blog";
     }
 
-  /*  @PostMapping("/admin-save-blog")
+    @PostMapping("/admin-save-blog")
     public String adminSaveBlog(@Valid @ModelAttribute("blogPostDto") BlogPostDto blogPostDto,
-                                @RequestParam String htmlContent,
+                                @RequestParam String content,
                                 @RequestParam(name = "img-file", required = false) MultipartFile imgFile,
                                 BindingResult result, Authentication authentication, Model model) throws IOException {
         if (result.hasErrors()) {
             model.addAttribute("blogPostDto", blogPostDto);
+           
             return "/admin/admin-create-blog";
         }
 
         LoginUserDetail userDetail = (LoginUserDetail) authentication.getPrincipal();
         blogPostDto.setUsers(userDetail.getUser());
 
-        if (blogPostDto.getId() >0 && blogPostService.findById(blogPostDto.getId()) != null) {
-            // If the ID exists, update the existing blog post
-            blogPostService.updateBlogPost(blogPostDto, htmlContent, imgFile);
+       if (blogPostDto.getId() >0 && blogPostService.findById(blogPostDto.getId()) != null) {
+           // If the ID exists, update the existing blog post
+            blogPostService.updateBlogPost(blogPostDto, content, imgFile);
+            System.out.println(content);
         } else {
-            // If the ID does not exist, create a new blog post
-            blogPostService.saveBlogPost(blogPostDto, htmlContent, imgFile);
+          //   If the ID does not exist, create a new blog post
+            blogPostService.saveBlogPost(blogPostDto, content, imgFile);
+            System.out.println(content);
+  
         }
 
         return "redirect:/admin/admin-view-blog";
     }
     
-    */
+    
 //
 //    @GetMapping("/admin-delete-blog/{id}")
 //    public String adminDeleteBlog(@PathVariable int id) throws IOException {
@@ -224,15 +238,14 @@ public class AdminCreateBlogController {
 //    }
 
     @GetMapping("/admin-edit-blog/{id}")
-    public String adminEditBlog(@Valid @PathVariable int id, Model model) throws IOException {
+    public String adminEditBlog(@Valid @PathVariable int id, String content, Model model) throws IOException {
         BlogPost blogPost = blogPostService.findById(id);
         if (blogPost == null) {
             return "redirect:/admin/admin-view-blog";
         }
-
-        String htmlContent = new String(Files.readAllBytes(Paths.get(HTML_FILE_PATH + blogPost.getHtmlFileName())));
-
-        BlogPostDto blogPostDto = new BlogPostDto();
+        	//content = Files.readString(Paths.get(htmlUploadDir + blogPost.getHtmlFileName()));
+        // content = new String(Files.readAllBytes(Paths.get(htmlUploadDir + blogPost.getHtmlFileName())));
+         BlogPostDto blogPostDto = new BlogPostDto();
         blogPostDto.setId(blogPost.getId());
         blogPostDto.setTitle(blogPost.getTitle());
         blogPostDto.setHtmlFileName(blogPost.getHtmlFileName());
@@ -240,7 +253,8 @@ public class AdminCreateBlogController {
         blogPostDto.setUsers(blogPost.getUsers());
 
         model.addAttribute("blogPostDto", blogPostDto);
-        model.addAttribute("htmlContent", htmlContent);
+        model.addAttribute("content", content );
         return "/admin/admin-edit-blog";
     }
+
 }
